--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
       <!-- To-do logic start's  -->
       <div id="todos">
         <div class="heading">
-          <h1>Coding Ninja's Front End Project</h1>
+          <h1>Attractive To Do List Wedsite</h1>
           <h2>To-Do List</h2>
         </div>
         <div class="todo-input-container">
